[gd_scene load_steps=5 format=3 uid="uid://donrxs5ckwva5"]

[ext_resource type="Script" uid="uid://30xq6av5i1go" path="res://Scenes/Levels/Pause_L/pause_l.gd" id="1_wou42"]
[ext_resource type="Shader" uid="uid://8s63b8vpye2k" path="res://Shaders/blur.gdshader" id="2_wwiwm"]
[ext_resource type="FontFile" uid="uid://d1sqem5jrihnp" path="res://Assets/PIXEARG_.TTF" id="3_won0e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pu6no"]
shader = ExtResource("2_wwiwm")
shader_parameter/lod = 1.345

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wou42")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pu6no")
layout_mode = 0
offset_right = 1150.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 223.0
offset_top = 280.0
offset_right = 915.0
offset_bottom = 416.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Overworld")
theme_override_fonts/font = ExtResource("3_won0e")
text = "Resume"

[node name="Overworld" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Controls")
theme_override_fonts/font = ExtResource("3_won0e")
text = "Return to Overworld"

[node name="Controls" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Overworld")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_fonts/font = ExtResource("3_won0e")
text = "Controls"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_bottom = NodePath("../Resume")
theme_override_fonts/font = ExtResource("3_won0e")
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Overworld" to="." method="_on_overworld_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
